objects/UserProvisioningRequest.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>SalesforceUser.Contact.Account.BillingStreet &amp; &quot;, &quot; &amp; SalesforceUser.Contact.Account.BillingCity &amp; &quot;, &quot; &amp; SalesforceUser.Contact.Account.BillingState &amp; &quot;, &quot; &amp; SalesforceUser.Contact.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>SalesforceUser.Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ag2Ag_ID__c</fullName>
        <formula>SalesforceUser.Ag2Ag_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BusinessLink ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppBusinessUnit__c</fullName>
        <formula>IF((IF( INCLUDES( Application__r.Business__c, &apos;Corporate&apos;) , 1, 0 ) +
IF( INCLUDES( Application__r.Business__c, &apos;Dairy&apos;) , 1, 0 ) +
IF( INCLUDES( Application__r.Business__c, &apos;Purina&apos;) , 1, 0 ) + 
IF( INCLUDES( Application__r.Business__c, &apos;WinField&apos;) , 1, 0 ) &gt; 1), &apos;true&apos;, &apos;false&apos;)</formula>
        <label>App Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>User Provisioning Requests</relationshipLabel>
        <relationshipName>User_Provisioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessLink_URL__c</fullName>
        <formula>IF( (ISPICKVAL( SalesforceUser.JobClassification__c, &apos;Farmer&apos;) &amp;&amp; Application__r.Name=&apos;R7 Tool&apos;) , &quot;https://www.answertech.com/login.html&quot;, Application__r.Businesslink_url__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BusinessLink URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_Information__c</fullName>
        <label>Collected Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Approval Step</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Approval_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Admin Approval needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Admin Can Be Bypssed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Admin_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Admin 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegated_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegated_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needed_ManualProv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needed Manual Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Email__c</fullName>
        <formula>Application__r.Send_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account_Info__c</fullName>
        <formula>IF(ISBLANK(SalesforceUser.Contact.Account.Parent.Id),&apos;Account does not have a parent&apos;,SalesforceUser.Contact.Account.Parent.Name + &apos; (&apos;+ SalesforceUser.Contact.Account.Parent.GUID__c+&apos;)&apos;)</formula>
        <label>Parent Account Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prov_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provisioning Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>User Provisioning Requests</relationshipLabel>
        <relationshipName>User_Provisioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Instructions__c</fullName>
        <formula>Application__r.FG_Admin_Instructions__c</formula>
        <label>Provisioning Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Access Policy Rule</label>
        <referenceTo>AP_Rule__c</referenceTo>
        <relationshipLabel>User Provisioning Requests</relationshipLabel>
        <relationshipName>User_Provisioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <formula>Application__r.Support_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Phone__c</fullName>
        <formula>Application__r.Support_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email__c</fullName>
        <formula>SalesforceUser.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_User_Name__c</fullName>
        <formula>SalesforceUser.FirstName &amp; &quot; &quot; &amp; SalesforceUser.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Reason__c</fullName>
        <label>User Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AnswerTech_UserProvisioningRequest</fullName>
        <columns>Name</columns>
        <columns>ConnectedApp</columns>
        <columns>Operation</columns>
        <columns>State</columns>
        <columns>Application__c</columns>
        <columns>ApprovalStatus</columns>
        <columns>SalesforceUser</columns>
        <columns>UserProvAccount</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AppName</field>
            <operation>contains</operation>
            <value>Answer Tech™</value>
        </filters>
        <label>AnswerTech Approvers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Application_Approvers_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Application Approvers</label>
        <queue>Application_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BLink_FG_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>BLink FG</label>
        <queue>BLink_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BLinks_Approvers_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>BLinks Approvers</label>
        <queue>BLinks_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Climate_FieldView_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Climate FieldView</label>
        <queue>Climate_FieldView</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Support</label>
        <queue>EMSCustomer_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_UserProvisioningRequest1</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer_Support</label>
        <queue>Customer_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DF_Blinks_Approvers_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>DF Blinks Approvers</label>
        <queue>DF_Blinks_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOD_MP_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>DOD_MP</label>
        <queue>DOD_MP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOD_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>DOD</label>
        <queue>DOD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DataSilo_Approvers_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>DataSilo Approvers</label>
        <queue>DataSilo_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Delegated_Admin_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>EMS Delegated Admin</label>
        <queue>EMS_Delegated_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Level_3_Support_UserProvisioningRequest</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>SystemModstamp</columns>
        <columns>SalesforceUser</columns>
        <columns>ExternalUserId</columns>
        <columns>AppName</columns>
        <columns>State</columns>
        <columns>Operation</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>iyer</value>
        </filters>
        <label>EMS Level 3 Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Equinox_Approvers_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Equinox Approvers</label>
        <queue>Equinox_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FGI_Admin_UserProvisioningRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>FGI Admin</label>
        <queue>FGI_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>